--- a/index.html
+++ b/index.html
@@ -90,12 +90,12 @@
 <body>
   <div class="container">
     <h1>Para Mayara ❤️</h1>
-    <p>Desde que você chegou, minha vida ganhou novas cores.<br>
+    <p>Desde que você chegou, minha vida ganhou novos rumos, cores e jeitos.<br>
     Não é só sobre amor, é sobre paz, sobre lar, sobre ter alguém que faz até os dias comuns se tornarem especiais.</p>
-    <p>Eu não quero apenas estar com você, eu quero ser com você.<br>
+    <p>Eu não quero apenas estar com você, eu quero ser com você e as crianças.<br>
     Quero construir cada capítulo, cada sorriso e até cada silêncio ao seu lado.</p>
     <p>Se o mundo perguntasse qual é o meu lugar favorito,<br>
-    eu diria sem pensar: no teu abraço.</p>
+    eu diria sem pensar: Perto de você.</p>
 
     <!-- Slideshow -->
     <div class="slideshow-container">
@@ -146,4 +146,5 @@
   </script>
 </body>
 </html>
+
 
