--- a/index.html
+++ b/index.html
@@ -99,11 +99,11 @@
 
     <!-- Slideshow -->
     <div class="slideshow-container">
-      <img class="slides fade" src="imagens.jpg" alt="Ft1">
-      <img class="slides fade" src="imagens.jpg" alt="Ft2">
-      <img class="slides fade" src="imagens.jpg" alt="Ft3">
-      <img class="slides fade" src="imagens.jpg" alt="Ft4">
-      <img class="slides fade" src="imagens.jpg" alt="Ft5">
+      <img class="slides fade" src="imagens.jpg" alt="ft1.jpeg">
+      <img class="slides fade" src="imagens.jpg" alt="ft2.jpeg">
+      <img class="slides fade" src="imagens.jpg" alt="ft3.jpeg">
+      <img class="slides fade" src="imagens.jpg" alt="ft4.jpeg">
+      <img class="slides fade" src="imagens.jpg" alt="ft5.jpeg">
 
     </div>
     <div class="dot-container">
@@ -146,5 +146,6 @@
   </script>
 </body>
 </html>
+
 
 
