--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     body {
       margin: 0;
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      background: linear-gradient(rgba(0,0,0,0.6), rgba(0,0,0,0.6)), url('https://images.unsplash.com/photo-1501594907352-04cda38ebc29?auto=format&fit=crop&w=1200&q=80');
+      background: linear-gradient(rgba(0,0,0,0.6), rgba(0,0,0,0.6)), url('https://raw.githubusercontent.com/MatheusMaia14/declaracao-amor/refs/heads/main/imagens.jpg/ft1.jpeg');
       background-size: cover;
       background-position: center;
       color: #fff;
@@ -146,6 +146,7 @@
   </script>
 </body>
 </html>
+
 
 
 
